infra/kubernetes/gatekeeper/privileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sdisallowprivileged

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sdisallowprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true

          msg := sprintf(
            "Privileged container is not allowed: %v",
            [container.name]
          )
        }
