infra/kubernetes/gatekeeper/root-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sdisallowroot

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRoot

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sdisallowroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0

          msg := sprintf(
            "Container must not run as root: %v",
            [container.name]
          )
        }
